Tests/typing/good/testfile-return-1.jl
function f() :: Int64 return 1 end
