Tests/typing/bad/testfile-scope-2.jl

function f() x = 0 ; while x < 10; y = x; x = x + 1; end end
print(y)
